fix scroll on mobiles

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ main {
 
 /* Hero Section */
 .hero {
-  width: 100%;
+  /* width: 100%; */
   background-image: url('./assets/images/HeroSection.png');
   background-position: center;
   background-repeat: no-repeat;
@@ -154,7 +154,6 @@ main {
 /* Running Section */
 .running {
   width: 100%;
-  overflow: hidden;
 }
 
 .running__wrapper {
@@ -189,10 +188,10 @@ main {
   }
 
   /* Hero Section */
-
   .hero__wrapper {
     margin: 0;
     padding: 5% 7%;
+    width: 90%;
   }
 
   .hero__content {
